Styles About contents correctly on mobile

--- a/src/assets/styles/topMenu.css
+++ b/src/assets/styles/topMenu.css
@@ -202,6 +202,7 @@ a:hover::before,
     border: 6px solid black;
     border-radius: 10px;
     transition: left 3.5s ease-in-out;
+    overflow-y: auto;
   }
 
   .mobile-menu-options {
@@ -212,7 +213,7 @@ a:hover::before,
     height: 40vh;
     z-index: 300;
     position: relative;
-    padding-top: 130px;
+    padding-top: 80px;
   }
   .adidas-logo-small-black {
     width: 100px;
@@ -245,6 +246,7 @@ a:hover::before,
     justify-content: center;
     /* height: 100%; */
     margin-top: 10px;
+    margin-bottom: 10px;
     padding: 0px 20px 0px 20px;
   }
   .description-copy-mobile {
@@ -275,6 +277,10 @@ a:hover::before,
     font-size: 0.95rem;
     font-style: italic;
   }
+}
+
+.github {
+  font-weight: 500;
 }
 
 /* CART DESKTOP */
